--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                         <div>
                           <span class="projects__subtitle">Web</span>
                           <h1 class="projects__title">Shop WebApplication</h1>
-                          <a href="https://github.com/Manish6251/Shop_WebApplication" class="projects__button">
+                          <a href="https://github.com/Manish6251/Shop_WebApplication" class="projects__button" target="_blank">
                             View demo <i class="ri-arrow-right-line"></i>
                           </a>
                         </div>
@@ -438,7 +438,7 @@
                           <div>
                             <span class="projects__subtitle">Web</span>
                             <h1 class="projects__title">Grocery Delivery web</h1>
-                            <a href="https://github.com/Manish6251/groceryDeliveryweb" class="projects__button">
+                            <a href="https://github.com/Manish6251/groceryDeliveryweb" class="projects__button" target="_blank">
                               View demo <i class="ri-arrow-right-line"></i>
                             </a>
                           </div>
@@ -450,7 +450,7 @@
                           <div>
                             <span class="projects__subtitle">Design</span>
                             <h1 class="projects__title">Application Design</h1>
-                            <a href="#" class="projects__button">
+                            <a href="#" class="projects__button" target="_blank">
                               View demo <i class="ri-arrow-right-line"></i>
                             </a>
                           </div>
@@ -462,7 +462,7 @@
                           <div>
                             <span class="projects__subtitle">Animation</span>
                             <h1 class="projects__title">Animation Prototypes</h1>
-                            <a href="#" class="projects__button">
+                            <a href="#" class="projects__button" target="_blank">
                               View demo <i class="ri-arrow-right-line"></i>
                             </a>
                           </div>
