--- a/index.html
+++ b/index.html
@@ -363,14 +363,14 @@
                      <i class="ri-layout-4-line"></i>
 
                      <h2 class="services__title">
-                      UI/UX <br>
-                      Designer
+                      Frontend<br>
+                      Developer
                      </h2>
 
                      <p class="services__description">
-                      Services that provides the best quality and at
-                      the request of the client, with professional
-                      work and customer support.
+                      As a front-end developer builds the front-end 
+                      portion of websites and web applications—the 
+                      part users see and interact with.
                      </p>
 
                      <div class="services__border"></div>
@@ -380,14 +380,15 @@
                     <i class="ri-code-line"></i>
 
                     <h2 class="services__title">
-                     Website <br>
-                     Design
+                     Backend <br>
+                     Developer
                     </h2>
 
                     <p class="services__description">
-                     Services that provides the best quality and at
-                     the request of the client, with professional
-                     work and customer support.
+                     As a backend developer control everything you 
+                     can see on a website, back-end developers are
+                     involved in data storage, security, and other
+                     server-side functions that you cannot see.
                     </p>
 
                     <div class="services__border"></div>
@@ -397,14 +398,15 @@
                   <i class="ri-quill-pen-line"></i>
 
                   <h2 class="services__title">
-                   Digital <br>
-                   Animator
+                   Database<br>
+                   Developer
                   </h2>
 
                   <p class="services__description">
-                   Services that provides the best quality and at
-                   the request of the client, with professional
-                   work and customer support.
+                  As a database developer responsible for the design,
+                  construction, and implementation of new databases,
+                  as well as modifying existing databas for
+                  platform updates and changes in user needs.
                   </p>
 
                   <div class="services__border"></div>
@@ -426,7 +428,7 @@
                         <div>
                           <span class="projects__subtitle">Web</span>
                           <h1 class="projects__title">Shop WebApplication</h1>
-                          <a href="https://github.com/Manish6251/Shop_WebApplication" class="projects__button" target="_blank">
+                          <a href="#" class="projects__button" target="_blank">
                             View demo <i class="ri-arrow-right-line"></i>
                           </a>
                         </div>
@@ -438,7 +440,7 @@
                           <div>
                             <span class="projects__subtitle">Web</span>
                             <h1 class="projects__title">Grocery Delivery web</h1>
-                            <a href="https://github.com/Manish6251/groceryDeliveryweb" class="projects__button" target="_blank">
+                            <a href="https://manish6251.github.io/Grocery/" class="projects__button" target="_blank">
                               View demo <i class="ri-arrow-right-line"></i>
                             </a>
                           </div>
@@ -448,9 +450,9 @@
                         <div class="projects__content swiper-slide">
                           <img src="img/project3.jpg" alt="projects image" class="projects__img">
                           <div>
-                            <span class="projects__subtitle">Design</span>
-                            <h1 class="projects__title">Application Design</h1>
-                            <a href="#" class="projects__button" target="_blank">
+                            <span class="projects__subtitle">Web</span>
+                            <h1 class="projects__title">Responsive Portfolio</h1>
+                            <a href="https://manish6251.github.io/Manish_Portfolio/" class="projects__button" target="_blank">
                               View demo <i class="ri-arrow-right-line"></i>
                             </a>
                           </div>
