--- a/index.html
+++ b/index.html
@@ -386,9 +386,9 @@
 
                     <p class="services__description">
                      As a backend developer control everything you 
-                     can see on a website, back-end developers are
-                     involved in data storage, security, and other
-                     server-side functions that you cannot see.
+                     can see on a website,involved in data storage,
+                     security, and other server-side functions that
+                     you cannot see.
                     </p>
 
                     <div class="services__border"></div>
@@ -403,10 +403,9 @@
                   </h2>
 
                   <p class="services__description">
-                  As a database developer responsible for the design,
-                  construction, and implementation of new databases,
-                  as well as modifying existing databas for
-                  platform updates and changes in user needs.
+                  As a database developer responsible for the construct,
+                  implementation and modifying existing
+                  database, updates and changes in user needs.
                   </p>
 
                   <div class="services__border"></div>
