Add images and modify index.html

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         <h3 class="skills__name">JavaScript</h3>
                         <span class="skills__subtitle">Basic</span>
                       </div>
-
+<!-- 
                       <div class="skill__data">
                         <div class="skills__blob">
                           <img src="img/react-2.svg" alt="skills image">
@@ -188,6 +188,15 @@
 
                         <h3 class="skills__name">React</h3>
                         <span class="skills__subtitle">Basic</span>
+                      </div> -->
+
+                      <div class="skill__data">
+                        <div class="skills__blob">
+                          <img src="img/angularjs.png" alt="skills image" style="height: 50px; width: 50px;">
+                        </div> 
+
+                        <h3 class="skills__name">Angular</h3>
+                        <span class="skills__subtitle">Intermediate</span>
                       </div>
 
                       <div class="skill__data">
@@ -253,6 +262,15 @@
 
                       <div class="skill__data">
                         <div class="skills__blob">
+                          <img src="img/node.png" alt="skills image">
+                        </div> 
+
+                        <h3 class="skills__name">Node Js</h3>
+                        <span class="skills__subtitle">Intermediate</span>
+                      </div>
+
+                      <div class="skill__data">
+                        <div class="skills__blob">
                           <img src="img/microsoft-sql-server-1.svg" alt="skills image">
                         </div> 
 
@@ -310,13 +328,20 @@
                    <i class="ri-building-line"></i> Professional Development
                   </h3>
                   <div class="qualification__info">
+                    <div>
+                      <h3 class="qualification__name">
+                       Software Developer
+                      </h3>
+                      <span class="qualification__country">Cylsys Software Solution,Gadarwara (M.P.)</span>
+                      <span class="qualification__year">March 2024 - Present</span>
+                     </div>
 
                     <div>
                       <h3 class="qualification__name">
                        Junior FullStack Java Development Trainee
                       </h3>
                       <span class="qualification__country">Tata Strive, Anand Gujrat</span>
-                      <span class="qualification__year">Sep.2023 - Present</span>
+                      <span class="qualification__year">Sep.2023 - March 2024</span>
                      </div>
 
                      <div>
@@ -415,8 +440,8 @@
                         <img src="img/project1.jpg" alt="projects image" class="projects__img">
                         <div>
                           <span class="projects__subtitle">Web</span>
-                          <h1 class="projects__title">Shop WebApplication</h1>
-                          <a href="#" class="projects__button" target="_blank">
+                          <h1 class="projects__title">Contact Manager</h1>
+                          <a href="https://github.com/Manish6251/ContactInfo_Manager" class="projects__button" target="_blank">
                             View demo <i class="ri-arrow-right-line"></i>
                           </a>
                         </div>
@@ -450,9 +475,9 @@
                         <div class="projects__content swiper-slide">
                           <img src="img/project4.jpg" alt="projects image" class="projects__img">
                           <div>
-                            <span class="projects__subtitle">Animation</span>
-                            <h1 class="projects__title">Animation Prototypes</h1>
-                            <a href="#" class="projects__button" target="_blank">
+                            <span class="projects__subtitle">Game</span>
+                            <h1 class="projects__title">Rock Paper Scissors</h1>
+                            <a href="https://rock-paper-scissors-game-omega-lime.vercel.app/" class="projects__button" target="_blank">
                               View demo <i class="ri-arrow-right-line"></i>
                             </a>
                           </div>
